# LynxNetStack

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
billing/netbox-billing/: README.md  pyproject.toml
docs/: DEPLOY.md  (+1 more)
jake2/: AGENTS.md  AUDIT_RULES.md  CLAUDE.md  Dockerfile  MIGRATION_NOTES.md  PROPOSED_CHANGES.md  README.md  jake  pyproject.toml
jake2/agents/: ollama_client.py
jake2/api/: __init__.py  jake_api_server.py
jake2/config/: .env.example  intent_parser.yaml
jake2/core/: __init__.py  context_builder.py  dispatch.py  intent_parser.py  intent_schema.py  jake_query.py  query_core.py  shared.py  tooling.py
jake2/data/: diagnosis_rendering_sites.json  intent_examples.jsonl  nycha_expected_units.json
jake2/diagnosis/: __init__.py  engine.py  evidence.py  workbook_adapter.py
jake2/docs/: fault_reasoning_phase1_audit_2026-04-23.md  loki_noise_filter.md
jake2/mcp/: __init__.py  bigmac_readonly_mcp.py  cnwave_exporter_readonly_mcp.py  jake_frontdoor_mcp.py  jake_ops_mcp.py  kea_mcp.py  routeros_access_catalog.py  routeros_access_mcp.py  routeros_dispatch_mcp.py  routeros_ops_catalog.py  routeros_ops_mcp.py  routeros_platform_catalog.py  routeros_platform_mcp.py  routeros_routing_catalog.py  routeros_routing_mcp.py  routeros_switching_catalog.py  routeros_switching_mcp.py  routeros_wireless_catalog.py  routeros_wireless_mcp.py  server_layout.py  site_observability_mcp.py  swos_switching_catalog.py  swos_switching_mcp.py  tauc_mcp.py  tplink_access_mcp.py  vendor_adapters.py  vilo_access_mcp.py  vilo_mcp.py  vilo_portal_mcp.py
jake2/references/: README.md
jake2/scripts/: export_nycha_subscribers.py  network_mapper.py  olt_telnet_read.py  report_cutover_status.py  revalidate_enabled_sites.py  run_jake.py  validate_workbook_cutover.py
jake2/tests/: test_address_resolution.py  test_audit_fixture_validation.py  test_collectors.py  test_diagnosis_engine.py  (+19 more)
ssh_mcp/: README.md  pyproject.toml
(+294 files in other folders)
