[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-mcp"
version = "0.1.0"
description = "Approval-gated SSH MCP server for AnythingLLM and similar agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
