[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-billing"
version = "0.1.0"
description = "Unified billing, tariffs, subscriptions, and invoicing plugin for NetBox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django",
  "stripe>=10.0.0",
]

[tool.setuptools]
packages = { find = { include = ["netbox_billing*"] } }
package-data = { "netbox_billing" = ["**/*", "templates/**"] }
license-files = []
